; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_svg-device.c_svg_dev_begin_group.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_svg-device.c_svg_dev_begin_group.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32* }

@svg_dev_begin_group.blend_names = internal global [16 x i8*] [i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i32 0, i32 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i32 0, i32 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.3, i32 0, i32 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.4, i32 0, i32 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.5, i32 0, i32 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.6, i32 0, i32 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.7, i32 0, i32 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.8, i32 0, i32 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.9, i32 0, i32 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.10, i32 0, i32 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.11, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.12, i32 0, i32 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.13, i32 0, i32 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.14, i32 0, i32 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.15, i32 0, i32 0)], align 16
@.str = private unnamed_addr constant [7 x i8] c"normal\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"multiply\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"screen\00", align 1
@.str.3 = private unnamed_addr constant [8 x i8] c"overlay\00", align 1
@.str.4 = private unnamed_addr constant [7 x i8] c"darken\00", align 1
@.str.5 = private unnamed_addr constant [8 x i8] c"lighten\00", align 1
@.str.6 = private unnamed_addr constant [12 x i8] c"color_dodge\00", align 1
@.str.7 = private unnamed_addr constant [11 x i8] c"color_burn\00", align 1
@.str.8 = private unnamed_addr constant [11 x i8] c"hard_light\00", align 1
@.str.9 = private unnamed_addr constant [11 x i8] c"soft_light\00", align 1
@.str.10 = private unnamed_addr constant [11 x i8] c"difference\00", align 1
@.str.11 = private unnamed_addr constant [10 x i8] c"exclusion\00", align 1
@.str.12 = private unnamed_addr constant [4 x i8] c"hue\00", align 1
@.str.13 = private unnamed_addr constant [11 x i8] c"saturation\00", align 1
@.str.14 = private unnamed_addr constant [6 x i8] c"color\00", align 1
@.str.15 = private unnamed_addr constant [11 x i8] c"luminosity\00", align 1
@FZ_BLEND_NORMAL = common dso_local global i32 0, align 4
@FZ_BLEND_LUMINOSITY = common dso_local global i32 0, align 4
@.str.16 = private unnamed_addr constant [94 x i8] c"<filter id=\22blend_%d\22><feBlend mode=\22%s\22 in2=\22BackgroundImage\22 in=\22SourceGraphic\22/></filter>\0A\00", align 1
@.str.17 = private unnamed_addr constant [3 x i8] c"<g\00", align 1
@.str.18 = private unnamed_addr constant [16 x i8] c"<g opacity=\22%g\22\00", align 1
@.str.19 = private unnamed_addr constant [25 x i8] c" filter=\22url(#blend_%d)\22\00", align 1
@.str.20 = private unnamed_addr constant [3 x i8] c">\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32, i32*, i32, i32, i32, float)* @svg_dev_begin_group to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @svg_dev_begin_group(i32* %0, i32* %1, i32 %2, i32* %3, i32 %4, i32 %5, i32 %6, float %7) #0 {
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca float, align 4
  %17 = alloca %struct.TYPE_4__*, align 8
  %18 = alloca i32*, align 8
  store i32* %0, i32** %9, align 8
  store i32* %1, i32** %10, align 8
  store i32 %2, i32* %11, align 4
  store i32* %3, i32** %12, align 8
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32 %6, i32* %15, align 4
  store float %7, float* %16, align 4
  %19 = load i32*, i32** %10, align 8
  %20 = bitcast i32* %19 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %20, %struct.TYPE_4__** %17, align 8
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 1
  %23 = load i32*, i32** %22, align 8
  store i32* %23, i32** %18, align 8
  %24 = load i32, i32* %15, align 4
  %25 = load i32, i32* @FZ_BLEND_NORMAL, align 4
  %26 = icmp slt i32 %24, %25
  br i1 %26, label %31, label %27

27:                                               ; preds = %8
  %28 = load i32, i32* %15, align 4
  %29 = load i32, i32* @FZ_BLEND_LUMINOSITY, align 4
  %30 = icmp sgt i32 %28, %29
  br i1 %30, label %31, label %33

31:                                               ; preds = %27, %8
  %32 = load i32, i32* @FZ_BLEND_NORMAL, align 4
  store i32 %32, i32* %15, align 4
  br label %33

33:                                               ; preds = %31, %27
  %34 = load i32, i32* %15, align 4
  %35 = load i32, i32* @FZ_BLEND_NORMAL, align 4
  %36 = icmp ne i32 %34, %35
  br i1 %36, label %37, label %66

37:                                               ; preds = %33
  %38 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %39 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 8
  %41 = load i32, i32* %15, align 4
  %42 = shl i32 1, %41
  %43 = and i32 %40, %42
  %44 = icmp eq i32 %43, 0
  br i1 %44, label %45, label %66

45:                                               ; preds = %37
  %46 = load i32, i32* %15, align 4
  %47 = shl i32 1, %46
  %48 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %49 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 8
  %51 = or i32 %50, %47
  store i32 %51, i32* %49, align 8
  %52 = load i32*, i32** %9, align 8
  %53 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %54 = call i32* @start_def(i32* %52, %struct.TYPE_4__* %53)
  store i32* %54, i32** %18, align 8
  %55 = load i32*, i32** %9, align 8
  %56 = load i32*, i32** %18, align 8
  %57 = load i32, i32* %15, align 4
  %58 = load i32, i32* %15, align 4
  %59 = sext i32 %58 to i64
  %60 = getelementptr inbounds [16 x i8*], [16 x i8*]* @svg_dev_begin_group.blend_names, i64 0, i64 %59
  %61 = load i8*, i8** %60, align 8
  %62 = call i32 (i32*, i32*, i8*, ...) @fz_write_printf(i32* %55, i32* %56, i8* getelementptr inbounds ([94 x i8], [94 x i8]* @.str.16, i64 0, i64 0), i32 %57, i8* %61)
  %63 = load i32*, i32** %9, align 8
  %64 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %65 = call i32* @end_def(i32* %63, %struct.TYPE_4__* %64)
  store i32* %65, i32** %18, align 8
  br label %66

66:                                               ; preds = %45, %37, %33
  %67 = load float, float* %16, align 4
  %68 = fcmp oeq float %67, 1.000000e+00
  br i1 %68, label %69, label %73

69:                                               ; preds = %66
  %70 = load i32*, i32** %9, align 8
  %71 = load i32*, i32** %18, align 8
  %72 = call i32 (i32*, i32*, i8*, ...) @fz_write_printf(i32* %70, i32* %71, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.17, i64 0, i64 0))
  br label %79

73:                                               ; preds = %66
  %74 = load i32*, i32** %9, align 8
  %75 = load i32*, i32** %18, align 8
  %76 = load float, float* %16, align 4
  %77 = fpext float %76 to double
  %78 = call i32 (i32*, i32*, i8*, ...) @fz_write_printf(i32* %74, i32* %75, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.18, i64 0, i64 0), double %77)
  br label %79

79:                                               ; preds = %73, %69
  %80 = load i32, i32* %15, align 4
  %81 = load i32, i32* @FZ_BLEND_NORMAL, align 4
  %82 = icmp ne i32 %80, %81
  br i1 %82, label %83, label %88

83:                                               ; preds = %79
  %84 = load i32*, i32** %9, align 8
  %85 = load i32*, i32** %18, align 8
  %86 = load i32, i32* %15, align 4
  %87 = call i32 (i32*, i32*, i8*, ...) @fz_write_printf(i32* %84, i32* %85, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.19, i64 0, i64 0), i32 %86)
  br label %88

88:                                               ; preds = %83, %79
  %89 = load i32*, i32** %9, align 8
  %90 = load i32*, i32** %18, align 8
  %91 = call i32 (i32*, i32*, i8*, ...) @fz_write_printf(i32* %89, i32* %90, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.20, i64 0, i64 0))
  ret void
}

declare dso_local i32* @start_def(i32*, %struct.TYPE_4__*) #1

declare dso_local i32 @fz_write_printf(i32*, i32*, i8*, ...) #1

declare dso_local i32* @end_def(i32*, %struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
